examples/type_system/failing/130_do_missing_brace.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// parity-expected-stderr-begin
// • 1 error • examples/type_system/failing/130_do_missing_brace.flx
// error[E034]: Missing Do Block
//
// This `do` block needs to start with `{`.
//
//   examples/type_system/failing/130_do_missing_brace.flx:21:12
//    |
// 21 | let y = do x + 1
//    |            ^
//    |            - This looks like the `do` block body
//
// Help:
//   Try adding `{` after `do`.
// parity-expected-stderr-end
// expect: compile_error
// expect-error: E034

let y = do x + 1
let after = 1
